<resources>
    <string name="app_name">AndroidMobileBootcampFourthWeek</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login">Giriş Yapın</string>
    <string name="hint_text_for_email">E-Posta Adresiniz</string>
    <string name="hint_text_for_password">Şifreniz</string>
    <string name="day_name">Today</string>
    <string name="no_task_exists">Eklemiş olduğunuz task bulunmamaktadır</string>
    <string name="title_activity_fab_tria">FabTriaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_new_task">Add a novel task:</string>
    <string name="add">Add</string>
    <string name="dismiss">Dismiss</string>

</resources>